# sizam

./: .gitignore  pyproject.toml  requirements.txt  run.py
src/sizam/application/: consts.py  parsers.py  schemas.py  worker.py
src/sizam/application/external_api/: __init__.py  wiki2035.py
src/sizam/domain/models/: base.py  request.py
src/sizam/main/: api.py  config.py
src/sizam/presentation/api/: security.py
src/sizam/presentation/api/routes/: __init__.py  courses.py
